--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- Add Kommunicate script here -->
+    <script type="text/javascript">
+      (function(d, m){
+      var kommunicateSettings = {"appId":"17e02a2a3ba47a545fbd98e463691550a"};
+      var s = document.createElement("script"); s.type = "text/javascript"; s.async = true;
+      s.src = "https://widget.kommunicate.io/v2/kommunicate.app";
+      var h = document.getElementsByTagName("head")[0]; h.appendChild(s);
+      window.kommunicate = m; m._globals = kommunicateSettings;
+      })(document, window.kommunicate || {});
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
